mcww_web/css/gallery.css
div:has(>.gallery-container)>label {
    z-index: 21;
}
.gallery-container {
    z-index: 0;
    button[title="Close"] {
        display: none;
    }
}
.image-container {
    button[title="Undo"] {
        display: none;
    }
}
div.upload-gallery .gallery-container button[title="Close"] {
    display: unset;
}

.mcww-full-height-media-button {
    height: 100% !important;
}

.video-container {
    &:has(time) {
        overflow: auto;
    }
    .icon-button:nth-last-child(2), .icon-button:nth-last-child(3) {
        display: none;
    }
}

.opened-file {
    .source-selection {
        display: none;
    }
}

div.gallery-workflow-fix-grid-height:not(.fullscreen)>.gallery-container .grid-container {
    height: min(80vh, 500px);
}

.mcww-pseudo-gallery {
    border: var(--block-border-width) solid var(--block-border-color) !important;
    border-radius: var(--block-radius);
    --mcww-pseudo-gallery-border-radius: var(--block-radius);
    overflow: hidden !important;
    .dataset {
        &:has(.gallery-item:only-child), &:not(:has(.gallery-item)) {
            display: none;
        }
        &>.gallery {
            background: var(--block-background-fill);
            &>button:first-child {
                border-bottom-left-radius: var(--mcww-pseudo-gallery-border-radius);
            }
        }
    }
    &>div {
        width: 100%;
        background: var(--block-background-fill) !important;
    }
    .selected {
        &, &:hover {
            border-color: var(--color-accent);
        }
    }
    .markdown-label {
        padding: var(--spacing-md) var(--spacing-sm) 0;
    }
    .markdown-toggle {
        padding-left: var(--spacing-sm);
        padding-bottom: var(--spacing-sm);
    }
    .download-text {
        margin-right: var(--spacing-sm);
        margin-top: auto;
        margin-bottom: var(--spacing-md);
    }
}
.overflow-gallery-dataset {
    margin-top: calc(0px - var(--layout-gap)/2);
    &:has(.gallery-item:only-child), &:not(:has(.gallery-item)) {
        display: none;
    }
    .selected {
        &, &:hover {
            border-color: var(--color-accent);
        }
    }
}
body:not(.secure-context) {
    .mcww-pseudo-gallery {
        button[title="Copy"], button:has(>.copy-text) {
            display: none;
        }
    }
    .audio-container .source-selection>button:nth-child(2) {
        display: none;
    }
    .camera-button {
        display: none;
    }
}

.upload-gallery, .video-container>.upload-container, .audio-container {
    button.paste.mcww-text-button {
        position: absolute;
        right: 10px;
        bottom: 4px;
    }
    &:has(.gallery-container) button.paste.mcww-text-button {
        display: none;
    }
    &:has(audio) button.paste.mcww-text-button {
        display: none;
    }
}

.gallery-button svg {
    width: 14px;
    height: 14px;
}

.mcww-link-protected {
    text-decoration: underline dashed;
}
.mcww-link-protected::after {
    content: " 📎";
    text-decoration: none;
    display: inline-block;
    font-size: 80%;
}

.no-camera .camera-button {
    display: none;
}

